--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/accent.png
+    - assets/images/diet-lunch-photo.jpg
+    - assets/images/diet-dinner-photo.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
