--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/accent.png
     - assets/images/diet-lunch-photo.jpg
     - assets/images/diet-dinner-photo.jpg
+    - assets/images/carboidrati_image.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
