--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ flutter:
     - assets/images/proteins_photo.png
     - assets/images/diet_logo.png
     - assets/images/current_diet.png
+    - assets/images/clessidra.png
+    - assets/images/attention_logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
