added Date Field and clear code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
 
   settings_ui: ^2.0.2
 
+  intl: ^0.17.0
+
+  date_time_picker: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
